--- a/splash-style.css
+++ b/splash-style.css
@@ -16,17 +16,18 @@
   #main-view #main-title {
     position: fixed;
     margin-left: 1100px;
-    margin-top: 550px; }
+    margin-top: 585px; }
     #main-view #main-title h1 {
       color: #f8d902;
       text-transform: uppercase;
       min-width: 400px;
-      font-size: 50px;
+      font-size: 45px;
       transition: ease-in 400ms; }
       #main-view #main-title h1 span {
         padding: 0 0.2em;
         background-color: black; }
     #main-view #main-title h2 {
+      font-size: 23px;
       padding: 0 0.2em;
       background-color: #f8d902; }
   #main-view nav {
@@ -42,16 +43,62 @@
       word-spacing: 5px;
       padding: 0 0.4em;
       border: 1px solid black; }
+      #main-view nav span#nav .resume:hover {
+        cursor: pointer;
+        font-size: 24px; }
+      #main-view nav span#nav .about:hover {
+        cursor: pointer;
+        font-size: 24px; }
+      #main-view nav span#nav .projects:hover {
+        cursor: pointer;
+        font-size: 24px; }
+      #main-view nav span#nav .contact:hover {
+        cursor: pointer;
+        font-size: 24px; }
     #main-view nav span#nav.show {
       display: inline-block;
       animation: nav-animation 500ms ease-in-out forwards; }
     #main-view nav a {
       color: #f8d902;
-      text-decoration: none; }
+      text-decoration: none;
+      transition: all 200ms ease-in-out; }
     #main-view nav span#menu-btn {
+      font-size: 25px;
+      transition: all 200ms ease-in-out;
       cursor: pointer; }
     #main-view nav span#menu-btn:hover {
       font-size: 33px; }
+
+.overlay {
+  position: absolute;
+  background: black;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  opacity: 0.7;
+  display: none;
+  transition: all 200ms ease-in-out;
+  text-align: center;
+  font-family: "Titillium Web", sans-serif; }
+  .overlay .content {
+    width: 700px;
+    height: 400px;
+    padding: 0 0.2em;
+    opacity: 1;
+    border: 15px solid black;
+    background: #f8d902;
+    display: flex;
+    align-items: center;
+    justify-content: center; }
+    .overlay .content .contact {
+      font-size: 25px;
+      font-weight: bold; }
+
+.overlay.show {
+  display: flex;
+  align-items: center;
+  justify-content: center; }
 
 /* Animations */
 @keyframes nav-animation {
