--- a/splash-style.css
+++ b/splash-style.css
@@ -55,6 +55,14 @@
       #main-view nav span#nav .contact:hover {
         cursor: pointer;
         font-size: 24px; }
+      #main-view nav span#nav .nav-close {
+        display: none;
+        transition: all 300ms ease-in-out; }
+        #main-view nav span#nav .nav-close:hover {
+          cursor: pointer;
+          transform: translate(-3px, 3px); }
+      #main-view nav span#nav .nav-close.show {
+        display: inline-block; }
     #main-view nav span#nav.show {
       display: inline-block;
       animation: nav-animation 500ms ease-in-out forwards; }
@@ -76,11 +84,19 @@
   left: 0;
   right: 0;
   bottom: 0;
-  opacity: 0.7;
   display: none;
-  transition: all 200ms ease-in-out;
-  text-align: center;
-  font-family: "Titillium Web", sans-serif; }
+  animation: overlay 400ms ease-in-out forwards;
+  font-family: "Titillium Web", sans-serif;
+  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.4); }
+  .overlay .close-btn {
+    position: absolute;
+    height: 30px;
+    width: 30px;
+    font-size: 30px;
+    color: #636e72;
+    cursor: pointer;
+    transition: all 200ms ease-in-out;
+    transform: translateY(-188px) translateX(338px); }
   .overlay .content {
     width: 700px;
     height: 400px;
@@ -94,6 +110,8 @@
     .overlay .content .contact {
       font-size: 25px;
       font-weight: bold; }
+  .overlay .intro {
+    position: fixed; }
 
 .overlay.show {
   display: flex;
@@ -108,6 +126,11 @@
   100% {
     transform: translateX(0px);
     opacity: 1; } }
+@keyframes overlay {
+  0% {
+    opacity: 0; }
+  100% {
+    opacity: 0.7; } }
 /* Responsive Design */
 @media (max-width: 1000px) {
   h1 span {
