--- a/splash-style.css
+++ b/splash-style.css
@@ -7,16 +7,19 @@
 #main-view {
   font-family: "Titillium Web", sans-serif;
   width: 100%;
+  min-width: 1200px;
   height: 100vh;
+  overflow: hidden;
   position: center;
   background-image: url(images/bg.jpg);
   background-size: cover;
   /* TITLE OF PAGE */
-  /* NAVIGATION */ }
+  /* NAVIGATION */
+  /* About Content */ }
   #main-view #main-title {
-    position: fixed;
-    margin-left: 1100px;
-    margin-top: 585px; }
+    margin-top: 580px;
+    margin-right: 270px;
+    float: right; }
     #main-view #main-title h1 {
       color: #f8d902;
       text-transform: uppercase;
@@ -29,9 +32,11 @@
     #main-view #main-title h2 {
       font-size: 23px;
       padding: 0 0.2em;
-      background-color: #f8d902; }
+      background-color: #f8d902;
+      max-width: 470px; }
   #main-view nav {
-    position: fixed;
+    overflow: hidden;
+    min-width: 450px;
     margin-left: 300px;
     margin-top: 200px;
     font-size: 28px;
@@ -76,6 +81,41 @@
       cursor: pointer; }
     #main-view nav span#menu-btn:hover {
       font-size: 33px; }
+  #main-view #about {
+    display: none;
+    margin-left: 10%;
+    margin-top: 7%;
+    max-width: 500px;
+    min-width: 500px;
+    height: 420px;
+    padding: 0 0.4em;
+    background-color: black;
+    opacity: 0.9;
+    animation: about 300ms ease-in-out forwards; }
+    #main-view #about p {
+      font-family: "Titillium Web", sans-serif;
+      font-size: 18px;
+      color: #f8d902; }
+    #main-view #about h2 {
+      margin-top: 5px;
+      width: 100%;
+      text-align: left;
+      font-family: "Titillium Web", sans-serif;
+      color: #f8d902; }
+    #main-view #about.show {
+      display: block; }
+    #main-view #about .close-about {
+      opacity: 0;
+      margin-top: -50px;
+      margin-left: 450px;
+      display: inline-block;
+      color: #f8d902;
+      transition: all 200ms ease-in-out; }
+      #main-view #about .close-about:hover {
+        cursor: pointer;
+        transform: scale(1.3); }
+      #main-view #about .close-about.show {
+        opacity: 1; }
 
 .overlay {
   position: absolute;
@@ -131,13 +171,20 @@
     opacity: 0; }
   100% {
     opacity: 0.7; } }
+@keyframes about {
+  0% {
+    transform: translateX(-1000px); }
+  100% {
+    transform: translateX(0px); } }
 /* Responsive Design */
 @media (max-width: 1000px) {
-  h1 span {
-    font-size: 30px; }
-
-  h2 {
-    font-size: 15px; } }
+  #main-title h1 span {
+    margin-left: 350px;
+    font-size: 20px; } }
+@media (max-width: 1000px) {
+  #main-title h2 {
+    margin-left: 350px;
+    font-size: 12px; } }
 /* Testing */
 
 /*# sourceMappingURL=splash-style.css.map */
