--- a/splash-style.css
+++ b/splash-style.css
@@ -15,7 +15,8 @@
   background-size: cover;
   /* TITLE OF PAGE */
   /* NAVIGATION */
-  /* About Content */ }
+  /* About Content */
+  /* Projects Section */ }
   #main-view #main-title {
     margin-top: 580px;
     margin-right: 270px;
@@ -47,18 +48,14 @@
       display: none;
       word-spacing: 5px;
       padding: 0 0.4em; }
-      #main-view nav span#nav .resume-nav:hover {
+      #main-view nav span#nav .resume-nav, #main-view nav span#nav .about-nav, #main-view nav span#nav .projects-nav, #main-view nav span#nav .contact-nav {
+        text-transform: uppercase;
+        color: #f1f2f6; }
+      #main-view nav span#nav .resume-nav:hover, #main-view nav span#nav .about-nav:hover, #main-view nav span#nav .projects-nav:hover, #main-view nav span#nav .contact-nav:hover {
         cursor: pointer;
-        font-size: 26px; }
-      #main-view nav span#nav .about-nav:hover {
-        cursor: pointer;
-        font-size: 26px; }
-      #main-view nav span#nav .projects-nav:hover {
-        cursor: pointer;
-        font-size: 26px; }
-      #main-view nav span#nav .contact-nav:hover {
-        cursor: pointer;
-        font-size: 26px; }
+        font-size: 26px;
+        color: #EAB543;
+        opacity: 0.8; }
       #main-view nav span#nav .nav-close {
         display: none;
         transition: all 300ms ease-in-out; }
@@ -67,9 +64,6 @@
           transform: translate(-3px, 3px); }
       #main-view nav span#nav .nav-close.show {
         display: inline-block; }
-      #main-view nav span#nav .resume-nav, #main-view nav span#nav .about-nav, #main-view nav span#nav .projects-nav, #main-view nav span#nav .contact-nav {
-        text-transform: uppercase;
-        color: #f1f2f6; }
     #main-view nav span#nav.show {
       display: inline-block;
       animation: nav-animation 500ms ease-in-out forwards; }
@@ -84,9 +78,10 @@
     #main-view nav span#menu-btn:hover {
       font-size: 33px; }
   #main-view #about {
+    font-family: "Titillium Web", sans-serif;
     display: none;
-    margin-left: 10%;
-    margin-top: 7%;
+    margin-left: 15%;
+    margin-top: 8%;
     max-width: 500px;
     min-width: 500px;
     height: 420px;
@@ -94,30 +89,81 @@
     background-color: black;
     opacity: 0.9;
     animation: about 300ms ease-in-out forwards; }
+    #main-view #about .top-banner {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      position: absolute;
+      top: 0;
+      right: 0;
+      height: 50px;
+      width: 100%;
+      background-image: url(images/7-banner.jpg);
+      background-size: cover; }
     #main-view #about p {
-      font-family: "Neucha", sans-serif;
-      font-size: 20px;
+      position: absolute;
+      top: 72px;
+      font-family: "Titillium Web", sans-serif;
+      font-size: 17px;
       color: #EAB543; }
     #main-view #about h2 {
-      margin-top: -5px;
-      margin-bottom: 25px;
-      width: 100%;
-      text-align: left;
-      font-family: "Neucha", sans-serif;
+      font-size: 25px;
       color: #EAB543; }
     #main-view #about.show {
       display: block; }
     #main-view #about .close-about {
-      opacity: 0;
-      margin-top: 2px;
-      margin-left: 476px;
+      position: absolute;
+      z-index: 2;
+      font-size: 22px;
+      right: 0;
       display: inline-block;
       color: #EAB543;
+      opacity: 0;
       transition: all 200ms ease-in-out; }
       #main-view #about .close-about:hover {
         cursor: pointer;
         transform: scale(1.3); }
       #main-view #about .close-about.show {
+        opacity: 1; }
+  #main-view #projects {
+    height: 400px;
+    width: 780px;
+    background: black;
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin-top: 5%;
+    margin-right: 8%;
+    display: none;
+    animation: projects 300ms ease-in-out forwards;
+    font-family: "Titillium Web", sans-serif; }
+    #main-view #projects.show {
+      display: block; }
+    #main-view #projects .top-banner {
+      position: absolute;
+      width: 780px;
+      height: 50px;
+      background-image: url(images/7-banner.jpg);
+      display: flex;
+      align-items: center;
+      justify-content: center; }
+      #main-view #projects .top-banner h2 {
+        font-size: 25px;
+        color: #EAB543; }
+    #main-view #projects .close-projects {
+      position: absolute;
+      z-index: 2;
+      font-size: 22px;
+      top: 0;
+      right: 0;
+      display: block;
+      color: #EAB543;
+      opacity: 0;
+      transition: all 200ms ease-in-out; }
+      #main-view #projects .close-projects:hover {
+        cursor: pointer;
+        transform: scale(1.3); }
+      #main-view #projects .close-projects.show {
         opacity: 1; }
 
 .overlay {
@@ -151,22 +197,48 @@
   border: 3px solid black;
   background: black;
   color: #EAB543;
-  font-family: "Neucha", sans-serif;
+  font-family: "Titillium Web", sans-serif;
   box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.4);
   animation: overlay2 500ms ease-in-out forwards; }
-  .content .contact {
-    font-size: 20px;
-    font-weight: bold; }
   .content .close-btn {
     position: absolute;
+    z-index: 2;
     right: 0.5em;
     top: 0.5em;
-    font-size: 30px;
+    font-size: 22px;
     color: #EAB543;
     cursor: pointer;
     transition: all 200ms ease-in-out; }
     .content .close-btn:hover {
-      transform: scale(1.2); }
+      transform: scale(1.3); }
+  .content .contact {
+    font-size: 20px;
+    font-weight: bold;
+    font-family: "Titillium Web", sans-serif; }
+    .content .contact h2 {
+      font-family: "Titillium Web", sans-serif;
+      font-size: 25px; }
+    .content .contact span {
+      opacity: 0.6; }
+    .content .contact .top-banner {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      position: absolute;
+      top: 0;
+      right: 0;
+      height: 50px;
+      width: 100%;
+      background-image: url(images/7-banner.jpg);
+      background-size: cover; }
+    .content .contact .btm-banner {
+      position: absolute;
+      bottom: 0;
+      right: 0;
+      height: 50px;
+      width: 100%;
+      background-image: url(images/7-banner.jpg);
+      background-size: cover; }
   .content .intro {
     position: fixed; }
   .content.show {
@@ -182,13 +254,16 @@
   right: 0;
   bottom: 0;
   margin-left: -350px;
-  margin-top: -425px; }
+  margin-top: -425px;
+  animation: overlay2 500ms ease-in-out forwards; }
   .resume.show {
     display: block; }
   .resume .cv-page1 {
-    display: block; }
+    display: block;
+    animation: flip 500ms ease-in-out forwards; }
   .resume .cv-page2 {
-    display: none; }
+    display: none;
+    animation: flip 500ms ease-in-out forwards; }
   .resume .flip-cv {
     margin-top: 10px;
     margin-left: 305px;
@@ -200,11 +275,13 @@
     cursor: pointer; }
   .resume .close-btn {
     position: absolute;
+    z-index: 2;
     left: 670px;
     font-size: 30px;
-    color: #EAB543;
+    color: #636e72;
     cursor: pointer;
-    transition: all 200ms ease-in-out; }
+    transition: all 200ms ease-in-out;
+    font-family: "Titillium Web", sans-serif; }
     .resume .close-btn:hover {
       transform: scale(1.2); }
 
@@ -231,6 +308,16 @@
     transform: translateX(-1000px); }
   100% {
     transform: translateX(0px); } }
+@keyframes projects {
+  0% {
+    transform: translateX(1000px); }
+  100% {
+    transform: translateX(0px); } }
+@keyframes flip {
+  0% {
+    transform: rotateX(180deg); }
+  100% {
+    transform: rotateX(0deg); } }
 /* Responsive Design */
 @media (max-width: 1000px) {
   #main-title h1 span {
