--- a/splash-style.sass
+++ b/splash-style.sass
@@ -3,6 +3,7 @@ $main-theme: #EAB543
 $main-title-offsetX: 270px
 $main-title-offsetY: 580px
 $main-font: 'Neucha', sans-serif
+$formal-font: 'Titillium Web', sans-serif
 
 *
   margin: 0px
@@ -10,7 +11,6 @@ $main-font: 'Neucha', sans-serif
   box-sizing: border-box
 
   
-
 /* MAIN SCREEN / WELCOME PAGE */
 
 #main-view
@@ -28,7 +28,6 @@ $main-font: 'Neucha', sans-serif
 
   /* TITLE OF PAGE */
 
-  $title-font: 'Titillium Web', sans-serif
 
   #main-title
     margin-top: $main-title-offsetY
@@ -40,7 +39,7 @@ $main-font: 'Neucha', sans-serif
       //text-transform: uppercase
       min-width: 400px
       font-size: 45px
-      font-family: $title-font
+      font-family: $formal-font
       transition: ease-in 400ms
       span
         // two values for padding indicate top-bottom paddings then right left paddings
@@ -70,20 +69,19 @@ $main-font: 'Neucha', sans-serif
       display: none
       word-spacing: 5px
       padding: 0 0.4em
-      //border: 1px solid black
-      // individual nav button hover animations
-      .resume-nav:hover
+
+      // individual nav button 
+      .resume-nav, .about-nav, .projects-nav, .contact-nav
+        text-transform: uppercase
+        color: #f1f2f6  
+
+      //hover animations
+      .resume-nav:hover, .about-nav:hover, .projects-nav:hover, .contact-nav:hover
         cursor: pointer
         font-size: 26px
-      .about-nav:hover
-        cursor: pointer
-        font-size: 26px
-      .projects-nav:hover
-        cursor: pointer
-        font-size: 26px
-      .contact-nav:hover
-        cursor: pointer
-        font-size: 26px
+        color: $main-theme
+        opacity: 0.8
+      
       // close button
       .nav-close
         display: none
@@ -94,9 +92,7 @@ $main-font: 'Neucha', sans-serif
       .nav-close.show
         display: inline-block
     
-      .resume-nav, .about-nav, .projects-nav, .contact-nav
-        text-transform: uppercase
-        color: #f1f2f6
+
 
     span#nav.show
       display: inline-block
@@ -118,10 +114,11 @@ $main-font: 'Neucha', sans-serif
 
   /* About Content */
 
-  #about 
+  #about
+    font-family: $formal-font
     display: none
-    margin-left: 10%
-    margin-top: 7%
+    margin-left: 15%
+    margin-top: 8%
     max-width: 500px
     min-width: 500px
     height: 420px
@@ -129,41 +126,103 @@ $main-font: 'Neucha', sans-serif
     background-color: black
     opacity: 0.9
     animation: about 300ms ease-in-out forwards
+
+    .top-banner
+      display: flex
+      align-items: center
+      justify-content: center
+      position: absolute
+      top: 0
+      right: 0
+      height: 50px
+      width: 100%
+      background: 
+        image: url(images/7-banner.jpg)
+        size: cover
+
     p
-      font-family: $main-font
-      font-size: 20px
+      position: absolute
+      top: 72px
+      font-family: $formal-font
+      font-size: 17px
       color: $main-theme
 
     h2
-      margin-top: -5px
-      margin-bottom: 25px
-      width: 100%
-      text-align: left
-      font-family: $main-font
+      font-size: 25px
       color: $main-theme
 
     &.show
       display: block
     
     .close-about
-      opacity: 0
-      margin-top: 2px
-      margin-left: 476px
+      position: absolute
+      z-index: 2
+      font-size: 22px
+      right: 0
       display: inline-block
       color: $main-theme
+      opacity: 0
       transition: all 200ms ease-in-out
+
+      &:hover
+        cursor: pointer
+        transform: scale(1.3)
+
+      &.show
+        opacity: 1
+
+  
+  /* Projects Section */ 
+
+  #projects
+    height: 400px
+    width: 780px
+    background: black
+    position: absolute
+    top: 0
+    right: 0
+    margin-top: 5%
+    margin-right: 8%
+    display: none 
+    animation: projects 300ms ease-in-out forwards
+    font-family: $formal-font
+
+    &.show
+      display: block
+
+    
+    .top-banner
+      position: absolute
+      width: 780px  
+      height: 50px
+      background: 
+        image: url(images/7-banner.jpg)
+      display: flex
+      align-items: center
+      justify-content: center
+    
+      h2 
+        font-size: 25px
+        color: $main-theme
+
+    .close-projects
+      position: absolute
+      z-index: 2
+      font-size: 22px
+      top: 0
+      right: 0
+      display: block
+      color: $main-theme
+      opacity: 0
+      transition: all 200ms ease-in-out
+
       &:hover
         cursor: pointer
         transform: scale(1.3)
       &.show
         opacity: 1
 
-
-  // Contact Content
-
-$content-width: 500px
-$content-height: 400px
-
+// Overlay Background (used for some pages)
 
 .overlay
   // so that it stays at the first landing page and overlays it
@@ -182,7 +241,12 @@ $content-height: 400px
     align-items: center
     justify-content: center
 
-  
+
+// Contact Content
+
+$content-width: 500px
+$content-height: 400px
+
 .content
   position: absolute
   display: none
@@ -200,25 +264,58 @@ $content-height: 400px
   border: 3px solid black
   background: black
   color: $main-theme
-  font-family: $main-font
+  font-family: $formal-font
   box-shadow: 0px 4px 20px rgba(0,0,0,0.4)
   animation: overlay2 500ms ease-in-out forwards
-
-  .contact
-    font-size: 20px
-    font-weight: bold
   
+
   .close-btn
     position: absolute
+    z-index: 2
     right: 0.5em
     top: 0.5em
-    font-size: 30px
-    color: $main-theme // #636e72
+    font-size: 22px
+    color: $main-theme
     cursor: pointer
     transition: all 200ms ease-in-out
 
     &:hover
-      transform: scale(1.2)
+      transform: scale(1.3)
+  
+  .contact 
+    font-size: 20px 
+    font-weight: bold
+    font-family: $formal-font
+
+    h2 
+      font-family: $formal-font
+      font-size: 25px
+
+    span 
+      opacity: 0.6 
+
+    .top-banner
+      display: flex
+      align-items: center
+      justify-content: center
+      position: absolute
+      top: 0
+      right: 0
+      height: 50px
+      width: 100%
+      background: 
+        image: url(images/7-banner.jpg)
+        size: cover
+
+    .btm-banner
+      position: absolute
+      bottom: 0
+      right: 0
+      height: 50px
+      width: 100%
+      background: 
+        image: url(images/7-banner.jpg)
+        size: cover
 
   .intro
     position: fixed
@@ -246,15 +343,18 @@ $cv-btn-height: 35px
   bottom: 0 
   margin-left: -$cv-width*0.5
   margin-top: -$cv-height*0.5
+  animation: overlay2 500ms ease-in-out forwards
 
   &.show
     display: block
 
   .cv-page1
     display: block
+    animation: flip 500ms ease-in-out forwards
 
   .cv-page2
     display: none
+    animation: flip 500ms ease-in-out forwards
 
   
   .flip-cv
@@ -273,14 +373,17 @@ $cv-btn-height: 35px
 
   .close-btn
     position: absolute
+    z-index: 2 // place above other elements so it's always visible after animation
     left: $cv-width - $resCloseBtnSize // keep it to the exact right of resume page
     font-size: $resCloseBtnSize
-    color: $main-theme // #636e72
+    color: #636e72
     cursor: pointer
     transition: all 200ms ease-in-out
+    font-family: $formal-font
 
     &:hover
       transform: scale(1.2)
+
 
 
 /* Animations */
@@ -316,6 +419,22 @@ $cv-btn-height: 35px
   100%  
     transform: translateX(0px)
 
+// projects section animation
+@keyframes projects
+  0%
+    transform: translateX(1000px)
+  100%
+    transform: translateX(0px)
+
+
+// resume section flipping resume
+@keyframes flip
+  0%
+    transform: rotateX(180deg)
+  100% 
+    transform: rotateX(0deg)
+
+
 
 /* Responsive Design */
 
@@ -332,6 +451,8 @@ $cv-btn-height: 35px
   #main-title h2
     margin-left: 350px
     font-size: 12px
+
+
 
 
 /* Testing */
