--- a/splash-style.css
+++ b/splash-style.css
@@ -11,7 +11,7 @@
   height: 100vh;
   overflow: hidden;
   position: center;
-  background-image: url(images/7.jpg);
+  background-image: url("images/7.jpg");
   background-size: cover;
   /* TITLE OF PAGE */
   /* NAVIGATION */
@@ -48,6 +48,10 @@
       display: none;
       word-spacing: 5px;
       padding: 0 0.4em; }
+      #main-view nav span#nav a {
+        color: #EAB543;
+        text-decoration: none;
+        transition: all 200ms ease-in-out; }
       #main-view nav span#nav .resume-nav, #main-view nav span#nav .about-nav, #main-view nav span#nav .projects-nav, #main-view nav span#nav .contact-nav {
         text-transform: uppercase;
         color: #f1f2f6; }
@@ -67,16 +71,13 @@
     #main-view nav span#nav.show {
       display: inline-block;
       animation: nav-animation 500ms ease-in-out forwards; }
-    #main-view nav a {
-      color: #EAB543;
-      text-decoration: none;
-      transition: all 200ms ease-in-out; }
     #main-view nav span#menu-btn {
-      font-size: 25px;
+      font-size: 28px;
       transition: all 200ms ease-in-out;
       cursor: pointer; }
-    #main-view nav span#menu-btn:hover {
-      font-size: 33px; }
+      #main-view nav span#menu-btn:hover {
+        font-size: 34px;
+        color: #f1f2f6; }
   #main-view #about {
     font-family: "Titillium Web", sans-serif;
     display: none;
@@ -94,11 +95,12 @@
       align-items: center;
       justify-content: center;
       position: absolute;
+      border: 2px solid black;
       top: 0;
       right: 0;
       height: 50px;
       width: 100%;
-      background-image: url(images/7-banner.jpg);
+      background-image: url("images/7-banner.jpg");
       background-size: cover; }
     #main-view #about p {
       position: absolute;
@@ -126,24 +128,49 @@
       #main-view #about .close-about.show {
         opacity: 1; }
   #main-view #projects {
-    height: 400px;
-    width: 780px;
+    height: 500px;
+    width: 745px;
     background: black;
     position: absolute;
     top: 0;
     right: 0;
     margin-top: 5%;
     margin-right: 8%;
-    display: none;
-    animation: projects 300ms ease-in-out forwards;
+    padding-top: 55px;
+    padding-left: 5px;
+    opacity: 0;
     font-family: "Titillium Web", sans-serif; }
     #main-view #projects.show {
-      display: block; }
+      opacity: 1;
+      animation: projects 300ms ease-in-out forwards; }
+    #main-view #projects .item {
+      height: 200px;
+      width: 280px;
+      margin-bottom: 5px;
+      animation: project-items 600ms ease-in-out forwards;
+      background-size: cover;
+      background-position: center; }
+      #main-view #projects .item:nth-child(3) {
+        background-image: url("images/proj1.jpg");
+        width: 360px; }
+      #main-view #projects .item:nth-child(4) {
+        background-image: url("images/proj4.jpg");
+        width: 360px; }
+      #main-view #projects .item:nth-child(5) {
+        background-image: url("images/proj3.jpg");
+        width: 360px; }
+      #main-view #projects .item:nth-child(6) {
+        width: 360px;
+        background-image: url("images/proj2.jpg"); }
     #main-view #projects .top-banner {
       position: absolute;
-      width: 780px;
+      margin-left: -5px;
+      border: 2px solid black;
+      top: 0;
+      z-index: 2;
+      width: 100%;
       height: 50px;
-      background-image: url(images/7-banner.jpg);
+      background-image: url("images/7-banner.jpg");
       display: flex;
       align-items: center;
       justify-content: center; }
@@ -152,7 +179,7 @@
         color: #EAB543; }
     #main-view #projects .close-projects {
       position: absolute;
-      z-index: 2;
+      z-index: 3;
       font-size: 22px;
       top: 0;
       right: 0;
@@ -225,19 +252,12 @@
       align-items: center;
       justify-content: center;
       position: absolute;
+      border: 2px solid black;
       top: 0;
       right: 0;
       height: 50px;
       width: 100%;
-      background-image: url(images/7-banner.jpg);
-      background-size: cover; }
-    .content .contact .btm-banner {
-      position: absolute;
-      bottom: 0;
-      right: 0;
-      height: 50px;
-      width: 100%;
-      background-image: url(images/7-banner.jpg);
+      background-image: url("images/7-banner.jpg");
       background-size: cover; }
   .content .intro {
     position: fixed; }
@@ -269,10 +289,13 @@
     margin-left: 305px;
     width: 90px;
     height: 35px;
-    color: #EAB543;
+    color: black;
     border: 3px solid #EAB543;
     font-family: "Neucha", sans-serif;
-    cursor: pointer; }
+    cursor: pointer;
+    background-color: #636e72; }
+    .resume .flip-cv:hover {
+      color: #EAB543; }
   .resume .close-btn {
     position: absolute;
     z-index: 2;
@@ -313,6 +336,13 @@
     transform: translateX(1000px); }
   100% {
     transform: translateX(0px); } }
+@keyframes project-items {
+  0% {
+    opacity: 0; }
+  50% {
+    opacity: 0; }
+  100% {
+    opacity: 1; } }
 @keyframes flip {
   0% {
     transform: rotateX(180deg); }
