--- a/splash-style.sass
+++ b/splash-style.sass
@@ -22,7 +22,7 @@ $formal-font: 'Titillium Web', sans-serif
   // center splash background
   position: center
   background:
-    image: url(images/7.jpg)
+    image: url('images/7.jpg')
     size: cover
 
 
@@ -69,6 +69,12 @@ $formal-font: 'Titillium Web', sans-serif
       display: none
       word-spacing: 5px
       padding: 0 0.4em
+      
+      a
+        color: $main-theme
+        text-decoration: none
+        // slow transition when cursor over nav options
+        transition: all 200ms ease-in-out
 
       // individual nav button 
       .resume-nav, .about-nav, .projects-nav, .contact-nav
@@ -97,19 +103,16 @@ $formal-font: 'Titillium Web', sans-serif
     span#nav.show
       display: inline-block
       animation: nav-animation 500ms ease-in-out forwards
-    a
-      color: $main-theme
-      text-decoration: none
-      // slow transition when cursor over nav options
-      transition: all 200ms ease-in-out
+
 
     span#menu-btn
-      font-size: 25px
+      font-size: 28px
       transition: all 200ms ease-in-out
       cursor: pointer
 
-    span#menu-btn:hover
-      font-size: 33px
+      &:hover
+        font-size: 34px
+        color: #f1f2f6 
 
 
   /* About Content */
@@ -132,12 +135,13 @@ $formal-font: 'Titillium Web', sans-serif
       align-items: center
       justify-content: center
       position: absolute
+      border: 2px solid black
       top: 0
       right: 0
       height: 50px
       width: 100%
       background: 
-        image: url(images/7-banner.jpg)
+        image: url('images/7-banner.jpg')
         size: cover
 
     p
@@ -175,28 +179,58 @@ $formal-font: 'Titillium Web', sans-serif
   /* Projects Section */ 
 
   #projects
-    height: 400px
-    width: 780px
+    height: 500px
+    width: 745px
     background: black
     position: absolute
     top: 0
     right: 0
     margin-top: 5%
     margin-right: 8%
-    display: none 
-    animation: projects 300ms ease-in-out forwards
+    padding-top: 55px
+    padding-left: 5px
+    opacity: 0
     font-family: $formal-font
+    
 
     &.show
-      display: block
+      opacity: 1
+      animation: projects 300ms ease-in-out forwards
+
+    .item
+      height: 200px 
+      width: 280px
+      margin-bottom: 5px 
+      //margin-left: 20px
+      animation: project-items 600ms ease-in-out forwards 
+      background:
+        size: cover
+        position: center
+      
+      &:nth-child(3)
+        background-image: url('images/proj1.jpg')
+        width: 360px
+      &:nth-child(4)
+        background-image: url('images/proj4.jpg')
+        width: 360px
+      &:nth-child(5)
+        background-image: url('images/proj3.jpg')
+        width: 360px        
+      &:nth-child(6)
+        width: 360px
+        background-image: url('images/proj2.jpg')
 
     
     .top-banner
       position: absolute
-      width: 780px  
+      margin-left: -5px
+      border: 2px solid black
+      top: 0
+      z-index: 2
+      width: 100%  
       height: 50px
       background: 
-        image: url(images/7-banner.jpg)
+        image: url('images/7-banner.jpg')
       display: flex
       align-items: center
       justify-content: center
@@ -207,7 +241,7 @@ $formal-font: 'Titillium Web', sans-serif
 
     .close-projects
       position: absolute
-      z-index: 2
+      z-index: 3
       font-size: 22px
       top: 0
       right: 0
@@ -299,23 +333,15 @@ $content-height: 400px
       align-items: center
       justify-content: center
       position: absolute
+      border: 2px solid black
       top: 0
       right: 0
       height: 50px
       width: 100%
       background: 
-        image: url(images/7-banner.jpg)
+        image: url('images/7-banner.jpg')
         size: cover
 
-    .btm-banner
-      position: absolute
-      bottom: 0
-      right: 0
-      height: 50px
-      width: 100%
-      background: 
-        image: url(images/7-banner.jpg)
-        size: cover
 
   .intro
     position: fixed
@@ -363,11 +389,14 @@ $cv-btn-height: 35px
     margin-left: ($cv-width*0.5) - ($cv-btn-width*0.5)
     width: $cv-btn-width
     height: $cv-btn-height
-    color: $main-theme
+    color: black
     border: 3px solid $main-theme
     font-family: $main-font
-
     cursor: pointer
+    background-color: #636e72
+
+    &:hover
+      color: $main-theme
   
   $resCloseBtnSize: 30px
 
@@ -426,6 +455,13 @@ $cv-btn-height: 35px
   100%
     transform: translateX(0px)
 
+@keyframes project-items
+  0%
+    opacity: 0
+  50%
+    opacity: 0
+  100%
+    opacity: 1
 
 // resume section flipping resume
 @keyframes flip
